old_CS_GTS_6/GTS_Tunay_2/RESU/20220914-1111/compile.log
/share/storage/finzeo/GTS_Tunay_2/RESU/20220914-1111/src/cs_user_boundary_conditions.c: En la función ‘cs_user_boundary_conditions’:
/share/storage/finzeo/GTS_Tunay_2/RESU/20220914-1111/src/cs_user_boundary_conditions.c:157:1: error: expected declaration or statement at end of input
 END_C_DECLS
 ^
/share/storage/finzeo/GTS_Tunay_2/RESU/20220914-1111/src/cs_user_boundary_conditions.c:157:1: error: expected declaration or statement at end of input
/share/storage/finzeo/GTS_Tunay_2/RESU/20220914-1111/src/cs_user_boundary_conditions.c:125:22: aviso: variable ‘ndim’ sin usar [-Wunused-variable]
   const unsigned int ndim=3;
                      ^
/share/storage/finzeo/GTS_Tunay_2/RESU/20220914-1111/src/cs_user_boundary_conditions.c:124:10: aviso: variable ‘tol’ sin usar [-Wunused-variable]
   double tol=1e-5;
          ^
/share/storage/finzeo/GTS_Tunay_2/RESU/20220914-1111/src/cs_user_boundary_conditions.c:123:14: aviso: variable ‘bfnor’ sin usar [-Wunused-variable]
   cs_real_t *bfnor = cs_glob_mesh_quantities->b_face_normal;
              ^
/share/storage/finzeo/GTS_Tunay_2/RESU/20220914-1111/src/cs_user_boundary_conditions.c:113:7: aviso: variable ‘uvar’ sin usar [-Wunused-variable]
   int uvar = cs_field_get_key_int(f, keyvar);
       ^
/share/storage/finzeo/GTS_Tunay_2/RESU/20220914-1111/src/cs_user_boundary_conditions.c:103:41: aviso: parámetro ‘nvar’ sin uso [-Wunused-parameter]
 cs_user_boundary_conditions(int         nvar,
                                         ^
/share/storage/finzeo/GTS_Tunay_2/RESU/20220914-1111/src/cs_user_boundary_conditions.c:105:41: aviso: parámetro ‘icodcl’ sin uso [-Wunused-parameter]
                             int         icodcl[],
                                         ^
/share/storage/finzeo/GTS_Tunay_2/RESU/20220914-1111/src/cs_user_boundary_conditions.c:106:41: aviso: parámetro ‘rcodcl’ sin uso [-Wunused-parameter]
                             cs_real_t   rcodcl[]) {
                                         ^
/share/storage/finzeo/GTS_Tunay_2/RESU/20220914-1111/src/cs_meg_initialization.c: En la función ‘cs_meg_initialization’:
/share/storage/finzeo/GTS_Tunay_2/RESU/20220914-1111/src/cs_meg_initialization.c:47:17: aviso: variable ‘c_id’ sin usar [-Wunused-variable]
       cs_lnum_t c_id = vz->elt_ids[e_id];
                 ^
/share/storage/finzeo/GTS_Tunay_2/RESU/20220914-1111/src/cs_user_extra_operations.cpp: En la función ‘void cs_user_extra_operations(cs_domain_t*)’:
/share/storage/finzeo/GTS_Tunay_2/RESU/20220914-1111/src/cs_user_extra_operations.cpp:144:12: aviso: secuencia de escape desconocida: '\m'
     printf("bounding box (containing cells with vel>maxvel): xmin %g %g %g, xmax %g %g %g\m \n",
            ^
/share/storage/finzeo/GTS_Tunay_2/RESU/20220914-1111/src/cs_user_extra_operations.cpp:194:17: aviso: la declaración de ‘j’ oscurece a una declaración local previa [-Wshadow]
         for(int j=0;j<ndim;j++) yplusmax_cog[j]=BFCOG(fid,j);
                 ^
/share/storage/finzeo/GTS_Tunay_2/RESU/20220914-1111/src/cs_user_extra_operations.cpp:182:18: nota: aquí está la declaración oscurecida
   for (cs_lnum_t j = 0; j<nfcext; j++) {
                  ^
/share/storage/finzeo/GTS_Tunay_2/RESU/20220914-1111/src/cs_user_extra_operations.cpp:208:13: aviso: secuencia de escape desconocida: '\m'
      printf("bounding box of vehicle: xmin %g %g %g, xmax %g %g %g\m \n",
             ^
/share/storage/finzeo/GTS_Tunay_2/RESU/20220914-1111/src/cs_user_extra_operations.cpp:315:17: aviso: la declaración de ‘xcell’ oscurece a una declaración local previa [-Wshadow]
      cs_real_t *xcell = cs_glob_mesh_quantities->cell_cen;
                 ^
/share/storage/finzeo/GTS_Tunay_2/RESU/20220914-1111/src/cs_user_extra_operations.cpp:110:14: nota: aquí está la declaración oscurecida
   cs_real_t *xcell = cs_glob_mesh_quantities->cell_cen;
              ^
/share/storage/finzeo/GTS_Tunay_2/RESU/20220914-1111/src/cs_user_extra_operations.cpp:170:39: aviso: variable ‘xc2’ sin usar [-Wunused-variable]
   cs_real_t xmin2[ndim], xmax2[ndim], xc2[ndim];
                                       ^
mpicc -DHAVE_CONFIG_H -I/share/storage/pub/mstorti/saturne-vof/include -I/share/storage/pub/mstorti/saturne-vof/include/code_saturne -I/share/storage/pub/mstorti/CGNS-341/include -I/share/apps/salome/7.8.0/Salome-V7_8_0-public/tools/Medfichier-320/include -I/share/storage/pub/mstorti/hdf5-1814/include -I/share/apps/salome/7.8.0/Salome-V7_8_0-public/prerequisites/Metis-510/include -I/share/apps/salome/7.8.0/Salome-V7_8_0-public/prerequisites/Scotch-5111/include -I/share/apps/mvapich/2.2/include -DMPICH_SKIP_MPICXX -I/share/apps/openblas/0.2.19-single/include -D_POSIX_C_SOURCE=200809L -DNDEBUG -std=c99 -fms-extensions -funsigned-char -pedantic -W -Wall -Wshadow -Wpointer-arith -Wcast-qual -Wcast-align -Wwrite-strings -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -Wnested-externs -Wunused -Wfloat-equal -fdiagnostics-color=auto -O2 -funroll-loops -I/share/apps/jsoncpp/1.8.4/include -fopenmp -funroll-loops -O2 -Wuninitialized -fexcess-precision=fast -c /share/storage/finzeo/GTS_Tunay_2/RESU/20220914-1111/src/cs_user_boundary_conditions.c
mpicc -DHAVE_CONFIG_H -I/share/storage/pub/mstorti/saturne-vof/include -I/share/storage/pub/mstorti/saturne-vof/include/code_saturne -I/share/storage/pub/mstorti/CGNS-341/include -I/share/apps/salome/7.8.0/Salome-V7_8_0-public/tools/Medfichier-320/include -I/share/storage/pub/mstorti/hdf5-1814/include -I/share/apps/salome/7.8.0/Salome-V7_8_0-public/prerequisites/Metis-510/include -I/share/apps/salome/7.8.0/Salome-V7_8_0-public/prerequisites/Scotch-5111/include -I/share/apps/mvapich/2.2/include -DMPICH_SKIP_MPICXX -I/share/apps/openblas/0.2.19-single/include -D_POSIX_C_SOURCE=200809L -DNDEBUG -std=c99 -fms-extensions -funsigned-char -pedantic -W -Wall -Wshadow -Wpointer-arith -Wcast-qual -Wcast-align -Wwrite-strings -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -Wnested-externs -Wunused -Wfloat-equal -fdiagnostics-color=auto -O2 -funroll-loops -I/share/apps/jsoncpp/1.8.4/include -fopenmp -funroll-loops -O2 -Wuninitialized -fexcess-precision=fast -c /share/storage/finzeo/GTS_Tunay_2/RESU/20220914-1111/src/cs_meg_initialization.c
mpicxx -I /share/storage/finzeo/GTS_Tunay_2/RESU/20220914-1111/src -DHAVE_CONFIG_H -I/share/storage/pub/mstorti/saturne-vof/include -I/share/storage/pub/mstorti/saturne-vof/include/code_saturne -I/share/storage/pub/mstorti/CGNS-341/include -I/share/apps/salome/7.8.0/Salome-V7_8_0-public/tools/Medfichier-320/include -I/share/storage/pub/mstorti/hdf5-1814/include -I/share/apps/salome/7.8.0/Salome-V7_8_0-public/prerequisites/Metis-510/include -I/share/apps/salome/7.8.0/Salome-V7_8_0-public/prerequisites/Scotch-5111/include -I/share/apps/mvapich/2.2/include -DMPICH_SKIP_MPICXX -I/share/apps/openblas/0.2.19-single/include -D_POSIX_C_SOURCE=200809L -DNDEBUG -W -Wall -Wshadow -Wpointer-arith -Wcast-qual -Wcast-align -Wwrite-strings -Wunused -Wfloat-equal -fdiagnostics-color=auto -O2 -funroll-loops -I/share/apps/jsoncpp/1.8.4/include -std=c++11 -funroll-loops -O2 -Wuninitialized -c /share/storage/finzeo/GTS_Tunay_2/RESU/20220914-1111/src/cs_user_extra_operations.cpp
